test/fail/integration/_fail_grammar_type_func_1.hs
x :: int -> Int -> Bool
main = print "hello"